# Neural-networks-from-scratch

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
concepts/ff/: index.html
doc/linear/: index.html
docs/: index.md  tests.md
docs/doc/: linear.md
networks/Linear/: feed_forward.py  readme.md
networks/nn/: nn.py
search/: search_index.json
tests/: index.html  test_ff.py  test_nn.py
