[tool.poetry]
name = "networks"
version = "0.1.0"
description = "Implementing diverse neural networks from scratch to explore deep learning fundamentals and gain hands-on experience."
authors = ["Imene KOLLI <53266529+imene-swaan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
mkdocs-material = {version = "^9.4.7", extras = ["imaging"]}
mkdocs = "^1.5.3"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
